emumaster (0.1.1) unstable; urgency=low

  * icons are removable from home screen now
  * accelerometer calibration
  * keyboard configuration (gamepad mapping)

 -- elemental <mar.kazmierczak@gmail.com>  Tue, 13 Dec 2011 08:39:17 +0100

emumaster (0.1.0) unstable; urgency=low

  * amiga emulation added
  * safety check for idle preventing battery drain
  * better error handling
  * display is not suspending while playing game
  * new look of the pad
  * configurable input devices
  * save/load error handling
  * global/local settings introduced
  * added search field
  * sixaxis support
  * completely redesigned UI
  * favourites category
  * workaround for sound bug (e.g. fix Mario Kart) - thanks to javispedro
  * added name filters based on disk extension
  * unified in-game menu
  * better scaler when selecting an icon for the home screen
  * information on few first runs
  * N900 build

 -- elemental <mar.kazmierczak@gmail.com>  Wed, 01 Sep 2011 10:02:09 +0200

emumaster (0.0.2) unstable; urgency=low

  * added gba emulation
  * added snes emulation
  * added psx <alpha> emulation
  * added page to select the console
  * user can select his own cover in disk gallery
  * states are compressed now
  * pad look redesigned (in-game exit button and L/R buttons added as well)
  * settings look refreshed
  * settings are saved now
  * added pad opacity option
  * added keep aspect ratio option
  * added option to remove icon from home screen (disk gallery)
  * added item in menu to remove disk (disk gallery)
  * added item in menu to run game with autoload disabled (disk gallery)
  * switched to asynchronous pulse audio
  * added accelerometer support
  * volume buttons now works correctly
  * redesigned architecture to speed up things
  * fixed bug in pad: when you touch on edge pad didn't work
  * fixed crash on pause button
  * render method for nes ppu can now be selected
  * nes game genie codes enable/disable fixed